--- a/inference/Cargo.toml
+++ b/inference/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 # libc = { version = "0.2", default-features = false }
 libc = { default-features = true }
 anyhow = "1.0.63"
+num = "0.4.0"
 onnxruntime = { git = "https://github.com/JonVaillant/onnxruntime-rs", branch = "master" }
 serde = "1.0.144"
 serde_json = "1.0.85"
